--- a/template/print.html
+++ b/template/print.html
@@ -149,6 +149,9 @@
                             <tr class="tabletitle">
                                 <td class="item"><h2>Item</h2></td>
                                 <td class="Hours"><h2>Qty</h2></td>
+                                <td class="Hours"><h2>Rate</h2></td>
+                                <td class="Hours"><h2>GST</h2></td>
+                                <td class="Hours"><h2>CESS</h2></td>
                                 <td class="Rate"><h2>Sub Total</h2></td>
                             </tr>
 
@@ -156,32 +159,17 @@
                                 <td class="tableitem"><p class="itemtext">Communication</p></td>
                                 <td class="tableitem"><p class="itemtext">5</p></td>
                                 <td class="tableitem"><p class="itemtext">$375.00</p></td>
-                            </tr>
-
-                            <tr class="service">
-                                <td class="tableitem"><p class="itemtext">Asset Gathering</p></td>
-                                <td class="tableitem"><p class="itemtext">3</p></td>
-                                <td class="tableitem"><p class="itemtext">$225.00</p></td>
-                            </tr>
-
-                            <tr class="service">
-                                <td class="tableitem"><p class="itemtext">Design Development</p></td>
+                                <td class="tableitem"><p class="itemtext">5</p></td>
                                 <td class="tableitem"><p class="itemtext">5</p></td>
                                 <td class="tableitem"><p class="itemtext">$375.00</p></td>
                             </tr>
-
                             <tr class="service">
-                                <td class="tableitem"><p class="itemtext">Animation</p></td>
-                                <td class="tableitem"><p class="itemtext">20</p></td>
-                                <td class="tableitem"><p class="itemtext">$1500.00</p></td>
-                            </tr>
-
-                            <tr class="service">
-                                <td class="tableitem"><p class="itemtext">Animation Revisions</p></td>
-                                <td class="tableitem"><p class="itemtext">10</p></td>
-                                <td class="tableitem"><p class="itemtext">$750.00</p></td>
-                            </tr>
-
+                              <td class="tableitem"><p class="itemtext">Communication</p></td>
+                              <td class="tableitem"><p class="itemtext">5</p></td>
+                              <td class="tableitem"><p class="itemtext">5</p></td>
+                              <td class="tableitem"><p class="itemtext">5</p></td>
+                              <td class="tableitem"><p class="itemtext">$375.00</p></td>
+                          </tr>
 
                             <tr class="tabletitle">
                                 <td></td>
